compiler/toyc-syntax/tests/snapshots/syntax__main@simple.toy.snap
---
source: compiler/toyc-syntax/tests/syntax.rs
assertion_line: 10
expression: "ast::parse::file().parse_recovery(Stream::from_iter(text.len()..text.len(),\n                                                    tokens))"

---
(
    Some(
        [
            TopLevel {
                vis: None,
                item: Function(
                    Function {
                        extern_: None,
                        ident: Ident(f),
                        generic_params: None,
                        params: [],
                        return_type: None,
                        body: Some(
                            Expr {
                                primary: CodeBlock(
                                    CodeBlock {
                                        statement: [],
                                        expr: None,
                                    },
                                ),
                                args: None,
                            },
                        ),
                    },
                ),
            },
        ],
    ),
    [],
)
